--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Paste to Download</title>
-	<link rel="stylesheet" href="/style.css" />
-	<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+
+<head>
+  <title>Paste to download</title>
+  <link rel="stylesheet" href="/style.css" />
   <link rel="icon" href="/assets/favicon.ico">
   <meta name="viewport" content="width=device-width, user-scalable=yes" />
-  </head>
-  <body>
-    <div id="paste-div"> 
-        <img id="download" src="/assets/download.gif" alt="" />
-      PASTE HERE TO DOWNLOAD
+</head>
+
+<body>
+  <div id="paste-div">
+    <img id="sparkles" src="/assets/sparkles.png" alt="" />
+    <div id="title">
+      PASTE <br> HERE TO <br> DOWNLOAD
     </div>
-    <script src="/index.js"></script>
-  </body>
+    <img id="download" src="/assets/download_icon.gif" alt="" />
+  </div>
+  <script src="/index.js"></script>
+</body>
+
 </html>
